src/index.sass
@use 'sass:math'
@font-face 
    font-family: 'Dalime'
    src: local('Dalime'), url('/fonts/Dalime.ttf') format('ttf')


@font-face 
    font-family: 'SignPainter'
    src: local('SignPainter'), url('/fonts/SignPainter-HouseScript.otf') format('otf')

@font-face 
    font-family: 'Alegreya'
    src: local('Alegreya'), url('/fonts/Alegreya-Regular.ttf') format('ttf')


$line-width-heavy: 1vw
$line-width-light: 0.25vw


$line-width-heavy-smscreen: 3vw
$line-width-light-smscreen: 1vw

body 
    left: 0
    margin: 0

main
    display: flex
    flex-direction: column
    align-items: center
    justify-content: center
    margin-bottom: 20vw
.buttonBar 
    margin-top: 5vh

h1 
    font-family: 'Dalime'
    font-size: 4.6875vw
    font-weight: 10
    text-align: right
    margin: 0
    @media (max-width: 640px)
        font-size: 6vw

.dateCell
    p 
        font-family: 'Alegreya'
        font-size: 4vw
        text-align: left
        // font-weight: 

h3 
    font-family: 'Alegreya'
    font-size: 3vw
    margin: 0

    @media (max-width: 640px)
        font-size: 8vw




.buttonBar 
    display: flex
    align-items: center
    justify-content: center

.navButton 
    width: 100px
    height: 70px
    margin: 0 10vw 0 10vw
    background: black
    color: white
    border: none
    border-radius: 35px

$gable-width: 61.35vw 
$gable-width-sm-screen: 59.6vw



.gable
    position: relative
    border-top: $line-width-heavy solid black
    border-left: $line-width-heavy solid black
    @media (max-width: 640px)
        border-top: $line-width-heavy-smscreen solid black
        border-left: $line-width-heavy-smscreen solid black
    // margin: 0
    width: $gable-width
    height: $gable-width
    @media (max-width: 640px)
        width: $gable-width-sm-screen
        height: $gable-width-sm-screen
    // left: 0
    top: 12vw
    transform: rotate(45deg)
    transform-origin: center
    // background: rgba(0, 0, 0, 0.5)


// .gableLeft 
//     position: absolute
//     border-bottom: $line-width-heavy solid black
//     width: 60.99vw
//     left: 50%
//     top: 0
//     transform: rotate(135deg)
//     transform-origin: left

// .gableRight 
//     position: absolute
//     border-bottom: $line-width-heavy solid black
//     width: 60.99vw
//     left: 50%
//     top: 0
//     transform: rotate(45deg)
//     transform-origin: left

    

.houseBorder 
    position: absolute
    width: 100%
    height: 48vw
    // margin-top: -22.25%
    top: 43.2vw
    // border-right: $line-width-heavy solid black
    // border-bottom: $line-width-heavy solid black
    // border-left: $line-width-heavy solid black
    margin-bottom: 2vw
    // background: rgba(255, 0, 0, 0.5)
    

.content 
    top: 0
    width: 100%
    position: absolute
    display: flex
    flex-direction: column
    align-items: flex-start
    justify-content: flex-start
    height: 100%

    .leftSection
        position: relative
        display: flex
        width: 66.66%
        flex-direction: column
        align-items: flex-end
        justify-content: flex-end
        // height: 100%

.titleBox 
    position: absolute

    // width: 100%
    margin-top: -21vw
    right: 0
    // bottom: 0

    @media (max-width: 640px)
        position: relative
        display: flex
        flex-direction: column
        width: 40vw
        position: relative
        top: 16vw
        // margin-top: 0
        // right: auto
        


.titleName
    text-align: right
    margin-right: 3vw
.titleSub
    font-family: 'SignPainter'
    font-size: 2.77vw
    margin-left: 2vh
    // text-align: right
    margin: 0
    text-align: right
    margin-right: 5vw

.subTitle 
    display: flex
    flex-direction: column
    align-items: center
    justify-content: center 

.vsepperator1 
    position: absolute
    height: 100vh
    left: 57.5vw
    top: 14.8vw
    border-right: $line-width-heavy solid black
    @media (max-width: 640px)
        border-right: $line-width-heavy-smscreen solid black

.hsepperator1
    position: absolute
    left: 0
    top: 50vw
    width: 66.66%
    border-bottom: $line-width-heavy solid black
    @media (max-width: 640px)
        border-bottom: $line-width-heavy-smscreen solid black

.hsepperator2
    position: relative
    left: 0
    margin-top: 2vw
    width: 100%
    border-bottom: $line-width-heavy solid black
    @media (max-width: 640px)
        border-bottom: $line-width-heavy-smscreen solid black
.hsepperator3
    position: relative
    left: 0
    // margin-top: 2vw
    width: 100%
    border-bottom: $line-width-heavy solid black
    @media (max-width: 640px)
        border-bottom: $line-width-heavy-smscreen solid black
.houseBounds 
    position: relative
    display: flex
    flex-direction: column
    align-items: center
    width: 88.25vw
    margin-bottom: 20vw
    top: 0


.dateContainer
    position: relative
    width: 33.33%
    height: 100%

    // background: rgba(255, 0, 0, .5)

    h2
        margin-top: 60vw
        transform: rotate(90deg)
        // transform-origin: center
        
.navContainer1
    position: relative
    display: flex
    flex-direction: column
    align-items: center
    height: 20vw
    width: 100%
    border-style: hidden
    // background: rgba(255, 0, 0, .5)
    
    table
        position: relative
        width: 100%
        height: 100%
        top: 14vw
        // border: $line-width-light solid black
        border-collapse: collapse
        td
            text-align: center
            border: $line-width-light solid black
            @media (max-width: 640px)
                border: $line-width-light-smscreen solid black
            width: 33.33%

        tr
            height: 14.28vw
        .titleCell
            position: relative
            height: 10vw
            width: 100%
            @media (max-width: 640px)
                // display: flex
                // justify-content: center
                .titleCont
                    width: 100%
                    display: flex
                    flex-direction: column
                    justify-content: center
                    align-items: center


        .shortRow
            border-left: $line-width-heavy solid black
            border-right: $line-width-heavy solid black
            @media (max-width: 640px)
                border-left: $line-width-heavy-smscreen solid black
                border-right: $line-width-heavy-smscreen solid black
            
            td
                position: relative
            position: relative
            height: 9vw

        .tallRow
            height: 29.21vw
        // tr:first-child td:first-child

        tr:nth-child(3) td:first-child
            border-top: $line-width-heavy solid black
            @media (max-width: 640px)
                border-top: $line-width-heavy-smscreen solid black

        tr:nth-child(1) td:nth-child(1)
            border: 0
        tr:nth-child(3) td:nth-child(1)
            border-right: $line-width-heavy solid black
            @media (max-width: 640px)
                border-right: $line-width-heavy-smscreen solid black
        tr:nth-child(4) td:nth-child(2)
            border-right: $line-width-heavy solid black
            @media (max-width: 640px)
                border-right: $line-width-heavy-smscreen solid black
        tr:nth-child(5) td:nth-child(1)
            border-right: $line-width-heavy solid black
            @media (max-width: 640px)
                border-right: $line-width-heavy-smscreen solid black
        tr:nth-child(5) td:nth-child(1)
            border-top: $line-width-heavy solid black
            @media (max-width: 640px)
                border-left: $line-width-heavy-smscreen solid black
        tr:nth-child(5) td:nth-child(2)
            border-top: $line-width-heavy solid black
            @media (max-width: 640px)
                border-left: $line-width-heavy-smscreen solid black
        tr:nth-child(5) td:nth-child(2)
            border-top: $line-width-heavy solid black
            @media (max-width: 640px)
                border-left: $line-width-heavy-smscreen solid black

        tr:nth-child(2) td:last-child
            border-top: 0            

        tr:nth-child(3) td:last-child
            border: 0  

        tr
            border-right: $line-width-heavy solid black
            @media (max-width: 640px)
                border-right: $line-width-heavy-smscreen solid black
        tr:first-child
            border-right: 0

        tr:first-child td 
            border-top: 0

        tr td:first-child 
            border-left: $line-width-heavy solid black
            @media (max-width: 640px)
                border-left: $line-width-heavy-smscreen solid black

        tr:first-child td:first-child 
            border-left: 0

        tr:nth-child(2) td:first-child 
            border-left: 0

        tr:nth-child(2) td:last-child 
            border-bottom: 0
        

        tr:last-child td 
            border-bottom: $line-width-heavy solid black
            @media (max-width: 640px)
                border-bottom: $line-width-heavy-smscreen solid black

        tr td:last-child 
            border-right: 0

        // tr:nth-child(2) td
        //     border-bottom: $line-width-heavy solid black
        tr:nth-child(1) td:nth-child(2)
            border: 0
            border-right: $line-width-heavy solid black
            // @media (max-width: 640px)
            //     border-right: $line-width-heavy-smscreen solid black
        tr:nth-child(2) td:nth-child(1)
            border: 0
            border-right: $line-width-heavy solid black
            @media (max-width: 640px)
                border-right: $line-width-heavy-smscreen solid black

    @media (max-width: 640px)
        table
            position: relative
            width: 100%
            height: 100%
            top: 18.38vw
            // border: $line-width-light solid black
            border-collapse: collapse
            td
                text-align: center
                border: $line-width-light-smscreen solid black
                width: 50%
            tr
                height: 25vw

            tr:nth-child(2) 
                height: 12vw
                
                td:nth-child(1)
                    height: 2vw
                    border: $line-width-heavy-smscreen solid black
                    border-top: 0
                    border-bottom: $line-width-light-smscreen solid black
            tr:nth-child(5) td:nth-child(1)
                border-top: $line-width-light-smscreen solid black
                
            tr:nth-child(3) td:nth-child(1)
                border-right: $line-width-light-smscreen solid black
                border-left: $line-width-heavy-smscreen solid black
                // border-top: $line-width-light-smscreen solid black


    .navRow
        position: relative
        display: flex
        flex-direction: row
        align-items: center
        width: 100%

    .RSVPButton
        display: flex
        flex-direction: row
        align-items: center
        justify-content: center
        width: 100%
        height: 10vw
        text-align: center


.dateCell
    position: relative
    // width: 100%
    transform: rotate(90deg)
    transform-origin: center
    text-align: right
    // margin: 0
    top: 12vw

.mainScroll
    display: absolute
    width: 100vw
    height: 100vh
    top: 0
    left: 0
    // bottom: 0
    overflow: scroll
    background-image: url(./images/SaveTheDate_gradient.jpeg)
    background-size: cover
    background-repeat: no-repeat
    background-position: center center
    background-attachment: fixed
    

